<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.example.chatuilib.customviews.CustomMaterialCardView
            android:id="@+id/cv_chat_bubble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp">

            <com.example.chatuilib.customviews.CustomTextView
                android:id="@+id/tv_chat_bubble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fadeScrollbars="false"
                android:scrollbars="vertical"
                android:text="@string/lib_lorem_ipsum" />

        </com.example.chatuilib.customviews.CustomMaterialCardView>

        <com.example.chatuilib.customviews.CustomTextView
            android:id="@+id/tv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_icon_bot"
            android:textSize="@dimen/_14ssp"
            android:elevation="@dimen/_12sdp"
            android:layout_centerHorizontal="true"
            app:customTextViewFont="@string/lib_font_icons" />

    </RelativeLayout>

</RelativeLayout>