<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_toolbar_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_5sdp"
    android:background="@color/lib_colorPrimary">

    <com.example.chatuilib.customviews.CustomTextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_6sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingBottom="@dimen/_6sdp"
        android:text="@string/lib_icon_back_arrow"
        android:textColor="@color/lib_colorWhite"
        android:textSize="@dimen/_18ssp"
        app:customTextViewFont="@string/lib_font_icons" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:padding="@dimen/_5sdp">

        <com.example.chatuilib.customviews.CustomTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text=""
            android:textColor="@color/lib_colorWhite"
            android:textSize="@dimen/_16ssp"
            tools:text="@string/lib_app_name" />

        <com.example.chatuilib.customviews.CustomTextView
            android:id="@+id/tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="Subject line of Chat Session"
            android:textColor="@color/lib_colorBlack"
            android:textSize="@dimen/_11ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/_5sdp">

        <com.example.chatuilib.customviews.CustomTextView
            android:id="@+id/tv_first_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:text="@string/lib_icon_menu"
            android:textColor="@color/lib_colorWhite"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone"
            app:customTextViewFont="@string/lib_font_icons" />

        <com.example.chatuilib.customviews.CustomTextView
            android:id="@+id/tv_second_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:textColor="@color/lib_colorWhite"
            android:text="@string/lib_icon_menu"
            android:textSize="@dimen/_15ssp"
            android:visibility="gone"
            app:customTextViewFont="@string/lib_font_icons" />

        <com.example.chatuilib.customviews.CustomTextView
            android:id="@+id/tv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:text="@string/lib_icon_menu"
            android:textColor="@color/lib_colorWhite"
            android:textSize="@dimen/_18ssp"
            app:customTextViewFont="@string/lib_font_icons" />

    </LinearLayout>

</RelativeLayout>